<?xml version="1.0"?>
<package format="2">
  <name>grapefruit_ros</name>
  <version>1.0.0</version>
  <description>ROS package for Grapefruit task planning</description>

  <maintainer email="peter.amorese@colorado.edu">peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
